# gpu-rust-miner

./: Cargo.toml
plugins/: README.md
plugins/cuda/: Cargo.toml  README.md
plugins/cuda/pyrin-cuda-native/src/: pyrin-cuda.cu
plugins/cuda/src/: worker.rs
plugins/opencl/: Cargo.toml  README.md
plugins/opencl/src/: lib.rs  worker.rs
src/: kaspad_messages.rs  pow.rs
src/pow/: hasher.rs  heavy_hash.rs  keccak.rs  xoshiro.rs
