[package]
name = "pyrincuda"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
kaspa-miner = {path = "../../"}
cust ="0.3"
log = "0.4"
rand = "0.8"
clap = { version = "4.5.21", features = ["color", "derive"]}
env_logger = "0.11.5"
nvml-wrapper = { git = "https://github.com/benrod3k/nvml-wrapper", branch = "master", optional = true }

[lib]
crate-type = ["cdylib", "rlib"]

[features]
overclock = [ "nvml-wrapper" ]
